UI Bug Fix bugfix: changes the burger positioning to be absolute to the navbar. when viewing on mobile, the burger menu was shifted away from the window edge. this was not replicatable when viewing in the browser mobile view during development. bugfix: hides the overflow on the inner container which created a scrollbar that caused the burger menu to shift when viewing on desktop. refactor: fixes relative paths on portfolio.

--- a/arch-studio/src/styles/main.css
+++ b/arch-studio/src/styles/main.css
@@ -104,7 +104,7 @@ h4 {
     max-width: 1423px;
     width: 100%;
     padding-inline: clamp(97px, 12vw, 156.5px) clamp(98px, 12vw, 156.5px);
-    overflow-x: hidden;
+    overflow: hidden;
 }
 /*Default element responsiveness*/
 @media (max-width: 768px) {
@@ -207,7 +207,6 @@ h4 {
         display: none;
     }
 }
-
 @media (max-width: 768px) {
     .navbar {
         position: relative;
@@ -238,9 +237,11 @@ h4 {
         margin-block-end: unset;
     }
     .navbar-burger {
+        position: absolute;
+        right: 22px;
         height: 5rem;
         width: fit-content;
-        margin-right: unset;
+        margin: unset;
     }
     .anchor::after {
         display: none;
